setup the notification and its listeners

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Spotify Clone</string>
+    <string name="channel_description">Show currently playing music</string>
 </resources>
