Player in working condition.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Spotify Clone</string>
     <string name="channel_description">Show currently playing music</string>
+    <string name="notification_channel_name">Spotify Music</string>
 </resources>
