added detail fragment for current playing song.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Spotify Clone</string>
     <string name="channel_description">Show currently playing music</string>
     <string name="notification_channel_name">Spotify Music</string>
+    <string name="duration_unknown">--:--</string>
+    <string name="duration_format">%d:%02d</string>
 </resources>
